cpp/test/Slice/errorDetection/IdentAsKeyword.err
IdentAsKeyword.ice:15: syntax error
IdentAsKeyword.ice:17: `Void': an exception can be defined only at module scope
IdentAsKeyword.ice:18: keyword `int' cannot be used as exception name
IdentAsKeyword.ice:18: `int': an exception can be defined only at module scope
IdentAsKeyword.ice:20: `OUT': a structure can be defined only at module scope
IdentAsKeyword.ice:21: keyword `double' cannot be used as struct name
IdentAsKeyword.ice:21: `double': a structure can be defined only at module scope
IdentAsKeyword.ice:23: `s1': a structure can be defined only at module scope
IdentAsKeyword.ice:24: `s2': a structure can be defined only at module scope
IdentAsKeyword.ice:24: keyword `byte' cannot be used as data member name
IdentAsKeyword.ice:25: `s3': a structure can be defined only at module scope
IdentAsKeyword.ice:26: `s4': a structure can be defined only at module scope
IdentAsKeyword.ice:26: keyword `byte' cannot be used as data member name
IdentAsKeyword.ice:28: `inTERface': a class can be defined only at module scope
IdentAsKeyword.ice:29: keyword `interface' cannot be used as class name
IdentAsKeyword.ice:29: `interface': a class can be defined only at module scope
IdentAsKeyword.ice:31: `MOdule': a class can be defined only at module scope
IdentAsKeyword.ice:32: keyword `module' cannot be used as class name
IdentAsKeyword.ice:32: `module': a class can be defined only at module scope
IdentAsKeyword.ice:34: `C': a class can be defined only at module scope
IdentAsKeyword.ice:35: `C': a class can be defined only at module scope
IdentAsKeyword.ice:35: keyword `extends' cannot be used as data member name
IdentAsKeyword.ice:36: `D': a class can be defined only at module scope
IdentAsKeyword.ice:36: keyword `extends' cannot be used as data member name
IdentAsKeyword.ice:38: keyword `local' cannot be used as interface name
IdentAsKeyword.ice:38: `local': an interface can be defined only at module scope
IdentAsKeyword.ice:39: `Local': an interface can be defined only at module scope
IdentAsKeyword.ice:41: keyword `Object' cannot be used as interface name
IdentAsKeyword.ice:41: `Object': an interface can be defined only at module scope
IdentAsKeyword.ice:42: `object': an interface can be defined only at module scope
IdentAsKeyword.ice:43: keyword `long' cannot be used as interface name
IdentAsKeyword.ice:43: `long': an interface can be defined only at module scope
IdentAsKeyword.ice:45: `impLEments': a sequence can be defined only at module scope
IdentAsKeyword.ice:46: sequence `implements' differs only in capitalization from sequence `impLEments'
IdentAsKeyword.ice:46: keyword `implements' cannot be used as sequence name
IdentAsKeyword.ice:47: `short': a sequence can be defined only at module scope
IdentAsKeyword.ice:47: keyword `short' cannot be used as sequence name
IdentAsKeyword.ice:49: syntax error
IdentAsKeyword.ice:50: `moDule' is not defined
IdentAsKeyword.ice:52: `throws': a dictionary can be defined only at module scope
IdentAsKeyword.ice:52: keyword `throws' cannot be used as dictionary name
IdentAsKeyword.ice:53: dictionary `thRows' differs only in capitalization from dictionary `throws'
IdentAsKeyword.ice:54: `LOCALobject': a dictionary can be defined only at module scope
IdentAsKeyword.ice:56: syntax error
IdentAsKeyword.ice:57: `MODULE' is not defined
IdentAsKeyword.ice:59: syntax error
IdentAsKeyword.ice:60: `d4': a dictionary can be defined only at module scope
IdentAsKeyword.ice:62: syntax error
IdentAsKeyword.ice:63: `VOID' is an exception, which cannot be used as a type
IdentAsKeyword.ice:65: keyword `local' cannot be used as enumeration name
IdentAsKeyword.ice:65: `local': an enumeration can be defined only at module scope
IdentAsKeyword.ice:66: enumeration `LOCAL' differs only in capitalization from enumeration `local'
IdentAsKeyword.ice:68: `e1': an enumeration can be defined only at module scope
IdentAsKeyword.ice:68: keyword `long' cannot be used as enumerator
IdentAsKeyword.ice:68: keyword `byte' cannot be used as enumerator
IdentAsKeyword.ice:69: `e2': an enumeration can be defined only at module scope
IdentAsKeyword.ice:71: `i1': an interface can be defined only at module scope
IdentAsKeyword.ice:72: `i2': an interface can be defined only at module scope
IdentAsKeyword.ice:74: `i3': an interface can be defined only at module scope
IdentAsKeyword.ice:75: `i4': an interface can be defined only at module scope
IdentAsKeyword.ice:77: `i5': an interface can be defined only at module scope
IdentAsKeyword.ice:77: syntax error
IdentAsKeyword.ice:78: `i6': an interface can be defined only at module scope
IdentAsKeyword.ice:80: `i7': an interface can be defined only at module scope
IdentAsKeyword.ice:81: `i8': an interface can be defined only at module scope
IdentAsKeyword.ice:83: `i9': an interface can be defined only at module scope
IdentAsKeyword.ice:84: `i10': an interface can be defined only at module scope
IdentAsKeyword.ice:86: `true': an interface can be defined only at module scope
IdentAsKeyword.ice:88: illegal leading underscore in identifier `_a'
IdentAsKeyword.ice:88: `_a': an interface can be defined only at module scope
IdentAsKeyword.ice:89: illegal leading underscore in identifier `_true'
IdentAsKeyword.ice:89: `_true': an interface can be defined only at module scope
IdentAsKeyword.ice:90: illegal leading underscore in identifier `_true'
IdentAsKeyword.ice:90: `_true': an interface can be defined only at module scope
IdentAsKeyword.ice:92: illegal trailing underscore in identifier `b_'
IdentAsKeyword.ice:92: `b_': an interface can be defined only at module scope
IdentAsKeyword.ice:94: illegal double underscore in identifier `b__c'
IdentAsKeyword.ice:94: `b__c': an interface can be defined only at module scope
IdentAsKeyword.ice:95: illegal double underscore in identifier `b___c'
IdentAsKeyword.ice:95: `b___c': an interface can be defined only at module scope
IdentAsKeyword.ice:97: illegal underscore in identifier `a_b'
IdentAsKeyword.ice:97: `a_b': an interface can be defined only at module scope
IdentAsKeyword.ice:98: illegal underscore in identifier `a_b_c'
IdentAsKeyword.ice:98: `a_b_c': an interface can be defined only at module scope
IdentAsKeyword.ice:100: syntax error
